# TCC

./: .gitignore  abntex2-meta.org
projeto/: estrutura  start.sh
projeto/admin/: .graphqlconfig  Dockerfile  codegen.yml  docker-compose.yaml  package-lock.json  package.json  schema.graphql
projeto/admin/src/: App.css  App.tsx  constants.ts  declarations.d.ts  index.tsx
projeto/admin/src/components/: PessimisticToolbar.tsx  custom-app-bar.tsx  custom-layout.tsx  custom-sidebar.tsx  forgot-password.tsx  lab-selector.tsx  lab.tsx  labStation.tsx  poli-theme.tsx  power-chart.tsx  smartPlugs.tsx  tag-field.tsx
projeto/admin/src/config/: firebase.json
projeto/admin/src/globals/: current-lab.ts  current-user.ts
projeto/admin/src/pages/: dashboard.tsx  lab.tsx  labStation.tsx  login.tsx  smartPlugs.tsx
projeto/app/: pubspec.yaml
projeto/app/lib/: main.dart
projeto/app/test/: widget_test.dart
projeto/backend/: .gitignore
projeto/backend/firebase/: .firebaserc  firebase.json
projeto/backend/hasura/: docker-compose.yaml  init.sql  restart_db.sh  seed_apply.sh
projeto/backend/mqtt-metrics-writer/: CHANGELOG.md  package-lock.json  package.json
projeto/tcc-lucas-harada/: pyproject.toml
projeto/tcc-lucas-harada/tests/: test_read_access.py  test_tcc_lucas_harada.py
projeto/tcc-lucas-harada/tests/operator/: definitions.md  test_audit.py  test_commands.py  test_device_management.py  test_reports.py
relatorio/: ideia.md  notes.md  perguntas-2021-07-12.md  requisitos.md  tcc.org  todo.org
relatorio/org/: abntex2-pretextual.org  perguntas
(+389 files in other folders)
