[tool.poetry]
name = "tcc-lucas-harada"
version = "0.1.0"
description = ""
authors = ["Lucas Harada <lucasyharada@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
paho-mqtt = "^1.5.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
black = "^21.6b0"
isort = "^5.8.0"
mypy = "^0.902"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
